src/styles/main.css
@import url('https://fonts.googleapis.com/css2?family=Ballet:opsz@16..72&display=swap');

@font-face {
  font-family: "Modified_Tangerine";
  src: url("../../assets/fonts/Tangerine/Tangerine-Regular.woff2") format("woff2");
  font-weight: 400;
  font-style: normal;
}

@font-face {
  font-family: "Modified_Bold_Tangerine";
  src: url("../../assets/fonts/Tangerine/Tangerine-Bold.woff2") format("woff2");
  font-weight: 700;
  font-style: normal;
}

:root {
  --PRIMARY: #0c0d14;
  --ACCENT: #333;
  --TEXT-PRIMARY: white;
  --TEXT-ACCENT: #bbb;
  --FONT-HEADING: "Ballet", cursive;
  --FONT-BODY: "Modified_Tangerine", cursive;
  --FONT-BODY-SIZE: 2rem;
}

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

body {
  color: var(--TEXT-PRIMARY);
  font-family: var(--FONT-BODY);
  font-size: var(--FONT-BODY-SIZE);
  background-color: var(--PRIMARY);
  display: grid;
  grid-template-columns: auto 1fr;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: var(--FONT-HEADING);
}

img {
    display: block;
    max-width: 100%;
}

a {
  text-decoration: none;
  color: inherit;
}

a:hover {
  opacity: 0.8;
}

.icon {
  aspect-ratio: 1/1;
}

nav {
  display: grid;
  position: sticky;
  top: 0;
  grid-template-rows: auto 1fr auto;
  gap: 2rem;
  padding: 1rem min(3vw, 2rem);
  flex-flow: column nowrap;
  border-right: 1px solid var(--ACCENT);
  height: 100vh;
}

nav .nav-container {
  list-style-type: none;
  display: flex;
  flex-flow: column nowrap;
}

nav .nav-container li {
  display: inline-block;
}

nav .nav-container li a {
  display: inline-flex;
  align-items: center;
  gap: 1rem;
  padding: 0.4rem;
  border-radius: 0.4rem;
  color: white;
  text-decoration: none;
}

nav .nav-container li a:hover {
    background-color: var(--ACCENT);
}

.page-inner {
  /* !!! Use this class for any content element aside from the nav */
  
  /* border-inline: 1px solid var(--ACCENT); */
  /* padding: 3rem; */
  width: clamp(660px, 70%, 1500px);
  max-width: 100%;
  padding: 1rem;
  margin-inline: auto; /* inline necessary as content is a grid element */
}

/* HÍRFOLYAM */
.post {
  border: 1px solid var(--ACCENT);
  margin-bottom: 1rem;
  padding: 2rem;
}

.post .post-author {
  display: flex;
  column-gap: 0.5rem;
  margin-bottom: 0.5rem;
}

.post .post-author .author-pfp {
  border-radius: 100%;
}

.post .post-author .author-name {
  font-weight: 700;
}

.post .post-content img {
  display: block;
  margin: 0.5rem auto;
  /* max-height: 1000px; */
}

@media screen and (max-width: 768px) {
  body {
    display: block;
    position: relative;
  }

  nav {
    align-items: center;
    grid-template-rows: none;
    grid-template-columns: auto 1fr auto;
    bottom: 0;
    background-color: var(--PRIMARY);
    border-top: var(--ACCENT);
    padding: 1rem;
    height: auto;
  }

  nav .nav-general {
    flex-flow: row;
    justify-content: center;
    column-gap: 1rem;
  }

  nav .nav-container {
    
  }

  nav .nav-container .link-text {
    display: none;
  }
}

